--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
-    "@slack/client": "^4.1.0"
+    "@slack/client": "^4.1.0",
+    "express": "^4.16.3",
+    "mysql": "^2.15.0",
+    "socket.io": "^2.1.0"
   }
 }
