--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@slack/client": "^4.1.0",
     "express": "^4.16.3",
+    "express-myconnection": "^1.0.4",
     "mysql": "^2.15.0",
     "socket.io": "^2.1.0"
   }
